@@ -4,15 +4,16 @@ import fi.digitraffic.tis.utilities.Streams;
 import fi.digitraffic.tis.vaco.api.model.Link;
 import fi.digitraffic.tis.vaco.api.model.Resource;
 import fi.digitraffic.tis.vaco.configuration.VacoProperties;
-import fi.digitraffic.tis.vaco.findings.model.Finding;
-import fi.digitraffic.tis.vaco.findings.FindingRepository;
+import fi.digitraffic.tis.vaco.db.mapper.RecordMapper;
+import fi.digitraffic.tis.vaco.db.model.FindingRecord;
+import fi.digitraffic.tis.vaco.db.repositories.FindingRepository;
 import fi.digitraffic.tis.vaco.findings.model.FindingSeverity;
 import fi.digitraffic.tis.vaco.packages.model.Package;
 import fi.digitraffic.tis.vaco.process.model.Task;
 import fi.digitraffic.tis.vaco.queuehandler.model.Entry;
 import fi.digitraffic.tis.vaco.ruleset.model.Ruleset;
 import fi.digitraffic.tis.vaco.ruleset.model.Type;
-import fi.digitraffic.tis.vaco.summary.SummaryRepository;
+import fi.digitraffic.tis.vaco.db.repositories.SummaryRepository;
 import fi.digitraffic.tis.vaco.summary.model.Summary;
 import fi.digitraffic.tis.vaco.summary.model.gtfs.Agency;
 import fi.digitraffic.tis.vaco.summary.model.gtfs.FeedInfo;
@@ -46,22 +47,30 @@ import static org.springframework.web.servlet.mvc.method.annotation.MvcUriCompon
 public class EntryStateService {
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
+
     private final FindingRepository findingRepository;
+
+    private final RecordMapper recordMapper;
+
     private final SummaryRepository summaryRepository;
+
     private final VacoProperties vacoProperties;
 
-    public EntryStateService(FindingRepository findingRepository, SummaryRepository summaryRepository, VacoProperties vacoProperties) {
+    public EntryStateService(FindingRepository findingRepository,
+                             SummaryRepository summaryRepository,
+                             VacoProperties vacoProperties,
+                             RecordMapper recordMapper) {
         this.findingRepository = Objects.requireNonNull(findingRepository);
         this.summaryRepository = Objects.requireNonNull(summaryRepository);
         this.vacoProperties = Objects.requireNonNull(vacoProperties);
+        this.recordMapper = Objects.requireNonNull(recordMapper);
     }
 
     public TaskReport getTaskReport(Task task, Entry entry, Map<String, Ruleset> rulesets) {
-        List<Finding> allFindings = findingRepository.findFindingsByTaskId(task.id());
+        List<FindingRecord> allFindings = findingRepository.findFindingsByTaskId(task.id());
 
-        Map<String, Long> findingCountersBySeverity =
-            allFindings.stream().collect(Collectors.groupingBy(f -> f.severity().toUpperCase(),
-                Collectors.counting()));
+        Map<String, Long> findingCountersBySeverity = allFindings.stream()
+            .collect(Collectors.groupingBy(f -> f.severity().toUpperCase(), Collectors.counting()));
         // Order of severities matters for UI:
         List<String> countersBySeverityKeys = new ArrayList<>(findingCountersBySeverity.keySet());
         countersBySeverityKeys.sort(new SortStringsBySeverity());
@@ -77,20 +86,20 @@ public class EntryStateService {
                 .build())
         );
 
-        Map<String, List<Finding>> findingsByMessage =
-            allFindings.stream().collect(Collectors.groupingBy(f -> f.message().toLowerCase()));
+        Map<String, List<FindingRecord>> findingsByMessage = allFindings.stream()
+            .collect(Collectors.groupingBy(f -> f.message().toLowerCase()));
         List<AggregatedFinding> aggregatedWithFindings = new ArrayList<>();
         findingsByMessage.forEach((code, findings) -> aggregatedWithFindings.add(ImmutableAggregatedFinding.builder()
                 .code(code)
-                .severity(findings.get(0).severity())
+                .severity(findings.getFirst().severity())
                 .total(findings.size())
-                .findings(findings)
+                .findings(Streams.collect(findings, recordMapper::toFinding))
             .build()));
         // aggregatedWithFindings should also be ordered from highest to lowest severity:
         aggregatedWithFindings.sort(new SortFindingsBySeverity());
 
         List<Package> taskPackages = entry.packages() != null
-            ? Streams.filter(entry.packages(), p -> p.taskId().equals(task.id())).toList()
+            ? Streams.filter(entry.packages(), p -> p.task().id().equals(task.id())).toList()
             : List.of();
         Optional<Ruleset> rule = Optional.ofNullable(rulesets.get(task.name()));
 
